--- a/PulseExtenderMod/.classpath
+++ b/PulseExtenderMod/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre6"/>
-	<classpathentry kind="lib" path="E:/Games/Minecraft/Server Mods/Server/craftbukkit-1.3.1-R2.0.jar"/>
+	<classpathentry kind="lib" path="F:/Games/Minecraft/Server Mods/Server/craftbukkit-1.3.1-R2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
